--- a/Mobile_Price_Classification.ipynb
+++ b/Mobile_Price_Classification.ipynb
@@ -22,8 +22,17 @@
         "\n",
         "##### Steps: \n",
         "\n",
-        "   ##### 1. Importing the necessary libraries:\n",
-        "   ##### 2. Reading the Train and Test Data: (Source:Kaggle)\n"
+        "  ##### I. Importing the necessary libraries:\n",
+        "  ##### II. Reading the Train and Test Data: (Source:Kaggle)\n",
+        "  ##### III. Exploratory Data Analysis:\n",
+        "  ##### IV.Fast Train :Before Feature engineering\n",
+        "  ##### V. Feature Engineering:\n",
+        "  ##### VI. Hyperparameter Tuning:\n",
+        "  ##### VII. Boosting:\n",
+        "  ##### VIII. BAGGING:\n",
+        "  ##### IX.Stacking\n",
+        "  ##### X.Voting :\n",
+        "  ##### Artificial Neural Network\n"
       ]
     },
     {
@@ -1343,7 +1352,7 @@
         "id": "16ce21b1"
       },
       "source": [
-        "# 4.Outliers: "
+        "## 4.Outliers: "
       ]
     },
     {
